[gd_scene load_steps=78 format=2]

[ext_resource path="res://assets/art/actors/Enemies/Skeleton/Sprite Sheets/Skeleton Walk.png" type="Texture" id=1]
[ext_resource path="res://src/Actors/Enemies/enemy1.gd" type="Script" id=2]
[ext_resource path="res://assets/art/actors/Enemies/Skeleton/Sprite Sheets/Skeleton Idle.png" type="Texture" id=3]
[ext_resource path="res://assets/art/actors/Enemies/Skeleton/Sprite Sheets/Skeleton Attack.png" type="Texture" id=4]
[ext_resource path="res://assets/art/actors/Enemies/Skeleton/Sprite Sheets/Skeleton Dead.png" type="Texture" id=5]
[ext_resource path="res://src/Actors/Enemies/hmc_enemy.gd" type="Script" id=6]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 24, 32 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 3 )
region = Rect2( 24, 0, 24, 32 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 3 )
region = Rect2( 48, 0, 24, 32 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 3 )
region = Rect2( 72, 0, 24, 32 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 3 )
region = Rect2( 96, 0, 24, 32 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 3 )
region = Rect2( 120, 0, 24, 32 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 3 )
region = Rect2( 144, 0, 24, 32 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 3 )
region = Rect2( 168, 0, 24, 32 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 3 )
region = Rect2( 192, 0, 24, 32 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 3 )
region = Rect2( 216, 0, 24, 32 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 3 )
region = Rect2( 240, 0, 24, 32 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 33, 32 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 5 )
region = Rect2( 33, 0, 33, 32 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 5 )
region = Rect2( 66, 0, 33, 32 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 5 )
region = Rect2( 99, 0, 33, 32 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 5 )
region = Rect2( 132, 0, 33, 32 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 5 )
region = Rect2( 165, 0, 33, 32 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 5 )
region = Rect2( 198, 0, 33, 32 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 5 )
region = Rect2( 231, 0, 33, 32 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 5 )
region = Rect2( 264, 0, 33, 32 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 5 )
region = Rect2( 297, 0, 33, 32 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 5 )
region = Rect2( 330, 0, 33, 32 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 5 )
region = Rect2( 363, 0, 33, 32 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 5 )
region = Rect2( 396, 0, 33, 32 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 5 )
region = Rect2( 429, 0, 33, 32 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 5 )
region = Rect2( 462, 0, 33, 32 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 22, 33 )

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 1 )
region = Rect2( 22, 0, 22, 33 )

[sub_resource type="AtlasTexture" id=29]
atlas = ExtResource( 1 )
region = Rect2( 44, 0, 22, 33 )

[sub_resource type="AtlasTexture" id=30]
atlas = ExtResource( 1 )
region = Rect2( 66, 0, 22, 33 )

[sub_resource type="AtlasTexture" id=31]
atlas = ExtResource( 1 )
region = Rect2( 88, 0, 22, 33 )

[sub_resource type="AtlasTexture" id=32]
atlas = ExtResource( 1 )
region = Rect2( 110, 0, 22, 33 )

[sub_resource type="AtlasTexture" id=33]
atlas = ExtResource( 1 )
region = Rect2( 132, 0, 22, 33 )

[sub_resource type="AtlasTexture" id=34]
atlas = ExtResource( 1 )
region = Rect2( 154, 0, 22, 33 )

[sub_resource type="AtlasTexture" id=35]
atlas = ExtResource( 1 )
region = Rect2( 176, 0, 22, 33 )

[sub_resource type="AtlasTexture" id=36]
atlas = ExtResource( 1 )
region = Rect2( 198, 0, 22, 33 )

[sub_resource type="AtlasTexture" id=37]
atlas = ExtResource( 1 )
region = Rect2( 220, 0, 22, 33 )

[sub_resource type="AtlasTexture" id=38]
atlas = ExtResource( 1 )
region = Rect2( 242, 0, 22, 33 )

[sub_resource type="AtlasTexture" id=39]
atlas = ExtResource( 1 )
region = Rect2( 264, 0, 22, 33 )

[sub_resource type="AtlasTexture" id=40]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 43, 37 )

[sub_resource type="AtlasTexture" id=41]
atlas = ExtResource( 4 )
region = Rect2( 43, 0, 43, 37 )

[sub_resource type="AtlasTexture" id=42]
atlas = ExtResource( 4 )
region = Rect2( 86, 0, 43, 37 )

[sub_resource type="AtlasTexture" id=43]
atlas = ExtResource( 4 )
region = Rect2( 129, 0, 43, 37 )

[sub_resource type="AtlasTexture" id=44]
atlas = ExtResource( 4 )
region = Rect2( 172, 0, 43, 37 )

[sub_resource type="AtlasTexture" id=45]
atlas = ExtResource( 4 )
region = Rect2( 215, 0, 43, 37 )

[sub_resource type="AtlasTexture" id=46]
atlas = ExtResource( 4 )
region = Rect2( 258, 0, 43, 37 )

[sub_resource type="AtlasTexture" id=47]
atlas = ExtResource( 4 )
region = Rect2( 301, 0, 43, 37 )

[sub_resource type="AtlasTexture" id=48]
atlas = ExtResource( 4 )
region = Rect2( 344, 0, 43, 37 )

[sub_resource type="AtlasTexture" id=49]
atlas = ExtResource( 4 )
region = Rect2( 387, 0, 43, 37 )

[sub_resource type="AtlasTexture" id=50]
atlas = ExtResource( 4 )
region = Rect2( 430, 0, 43, 37 )

[sub_resource type="AtlasTexture" id=51]
atlas = ExtResource( 4 )
region = Rect2( 473, 0, 43, 37 )

[sub_resource type="AtlasTexture" id=52]
atlas = ExtResource( 4 )
region = Rect2( 516, 0, 43, 37 )

[sub_resource type="AtlasTexture" id=53]
atlas = ExtResource( 4 )
region = Rect2( 559, 0, 43, 37 )

[sub_resource type="AtlasTexture" id=54]
atlas = ExtResource( 4 )
region = Rect2( 602, 0, 43, 37 )

[sub_resource type="AtlasTexture" id=55]
atlas = ExtResource( 4 )
region = Rect2( 645, 0, 43, 37 )

[sub_resource type="AtlasTexture" id=56]
atlas = ExtResource( 4 )
region = Rect2( 688, 0, 43, 37 )

[sub_resource type="AtlasTexture" id=57]
atlas = ExtResource( 4 )
region = Rect2( 731, 0, 43, 37 )

[sub_resource type="SpriteFrames" id=58]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
}, {
"frames": [ SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), SubResource( 26 ) ],
"loop": true,
"name": "Dead",
"speed": 5.0
}, {
"frames": [  ],
"loop": true,
"name": "React",
"speed": 5.0
}, {
"frames": [ SubResource( 27 ), SubResource( 28 ), SubResource( 29 ), SubResource( 30 ), SubResource( 31 ), SubResource( 32 ), SubResource( 33 ), SubResource( 34 ), SubResource( 35 ), SubResource( 36 ), SubResource( 37 ), SubResource( 38 ), SubResource( 39 ) ],
"loop": true,
"name": "Walk",
"speed": 5.0
}, {
"frames": [ SubResource( 40 ), SubResource( 41 ), SubResource( 42 ), SubResource( 43 ), SubResource( 44 ), SubResource( 45 ), SubResource( 46 ), SubResource( 47 ), SubResource( 48 ), SubResource( 49 ), SubResource( 50 ), SubResource( 51 ), SubResource( 52 ), SubResource( 53 ), SubResource( 54 ), SubResource( 55 ), SubResource( 56 ), SubResource( 57 ) ],
"loop": true,
"name": "Attack",
"speed": 5.0
} ]

[sub_resource type="Animation" id=59]
length = 1.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "Attack" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=60]
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "Dead" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=61]
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "Idle" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=62]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "Walk" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AnimatedSprite:speed_scale")
tracks/2/interp = 0
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 6.0, 1.0 ]
}

[sub_resource type="Animation" id=63]
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "Walk" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = false
tracks/1/keys = {
"times": PoolRealArray(  ),
"transitions": PoolRealArray(  ),
"update": 1,
"values": [  ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AnimatedSprite:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="CapsuleShape2D" id=64]
radius = 4.17373
height = 5.79688

[sub_resource type="CircleShape2D" id=65]
radius = 7.9569

[sub_resource type="ShaderMaterial" id=66]

[sub_resource type="Theme" id=67]

[sub_resource type="StyleBoxFlat" id=68]
bg_color = Color( 0.686275, 0.0705882, 0.184314, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.960784, 0.156863, 0.364706, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
corner_detail = 10

[sub_resource type="StyleBoxFlat" id=69]
bg_color = Color( 0.686275, 0.184314, 0.184314, 0 )

[sub_resource type="StyleBoxFlat" id=70]
bg_color = Color( 0.0666667, 0.494118, 0.87451, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.588235, 0.807843, 0.945098, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id=71]
bg_color = Color( 0, 0, 0, 0 )

[node name="Enemy" type="KinematicBody2D" groups=[
"Enemies",
]]
position = Vector2( 1.23743, 2.12132 )
scale = Vector2( 2, 2 )
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( -4.37208, -0.59834 )
scale = Vector2( 0.6, 0.6 )
frames = SubResource( 58 )
animation = "Idle"
frame = 5
playing = true

[node name="eated" type="Sprite" parent="."]
visible = false
position = Vector2( -0.353554, -1.59099 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 5 )
hframes = 15
frame = 4

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Attack = SubResource( 59 )
anims/Dead = SubResource( 60 )
anims/Idle = SubResource( 61 )
anims/Run = SubResource( 62 )
anims/Walk = SubResource( 63 )

[node name="hitBox" type="CollisionShape2D" parent="."]
position = Vector2( -7.07106, 2.47488 )
shape = SubResource( 64 )

[node name="hitRange" type="CollisionShape2D" parent="."]
position = Vector2( 2.34405, 1.4072 )
shape = SubResource( 65 )

[node name="viewLeft" type="RayCast2D" parent="."]
position = Vector2( 4.5962, 3.18198 )
cast_to = Vector2( 20, 0 )

[node name="viewRight" type="RayCast2D" parent="."]
position = Vector2( -14.6725, 3.71231 )
cast_to = Vector2( -20, 0 )

[node name="timers" type="Node2D" parent="."]

[node name="DeadAnim" type="Timer" parent="timers"]
wait_time = 3.0

[node name="hmc" type="Control" parent="."]
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UI" type="VBoxContainer" parent="hmc"]
margin_left = -12.0
margin_top = -14.0
margin_right = 49.0
margin_bottom = -7.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HP" type="HBoxContainer" parent="hmc/UI"]
margin_right = 61.0
margin_bottom = 5.0

[node name="HPText" type="Label" parent="hmc/UI/HP"]
visible = false
margin_right = 18.0
margin_bottom = 14.0
text = "HP"

[node name="HPBar" type="ProgressBar" parent="hmc/UI/HP"]
material = SubResource( 66 )
margin_right = 20.0
margin_bottom = 5.0
rect_min_size = Vector2( 20, 5 )
size_flags_vertical = 1
theme = SubResource( 67 )
custom_styles/fg = SubResource( 68 )
custom_styles/bg = SubResource( 69 )
value = 50.0
percent_visible = false

[node name="MP" type="HBoxContainer" parent="hmc/UI"]
visible = false
margin_top = 18.0
margin_right = 126.0
margin_bottom = 32.0
rect_min_size = Vector2( 122, 14 )

[node name="MPText" type="Label" parent="hmc/UI/MP"]
margin_right = 20.0
margin_bottom = 14.0
text = "MP"

[node name="MPBar" type="ProgressBar" parent="hmc/UI/MP"]
margin_left = 24.0
margin_right = 124.0
margin_bottom = 14.0
rect_min_size = Vector2( 100, 14 )
custom_styles/fg = SubResource( 70 )
custom_styles/bg = SubResource( 71 )
value = 50.0
percent_visible = false

[connection signal="timeout" from="timers/DeadAnim" to="." method="_on_DeadAnim_timeout"]
